# desistenao-projeto-ufu

./: database.py  docker-compose.yaml  main.py  pyproject.toml  utils.py
